[package]
name = "rgdcd"
version = "0.1.0"
authors = ["Brandon Pitman <bran@bran.land>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = "3"
log = "0.4.17"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
serde = "1"
serde_derive = "1"
serde_yaml = "0.8.24"
simple_logger = "2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
